minor bug fixes, stable version 1.0.0
